Fix transport modes label alignment in mobile map teaser

--- a/styles.css
+++ b/styles.css
@@ -170,6 +170,8 @@ a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-width: 80px;
+  text-align: center;
 }
 
 .map-teaser-num {
